# nifti-zarr-py

./: .gitignore  .gitmodules  CITATION.cff  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish.yml  publish_on_release.yml  release.yml  run_tests.yml  test_on_release.yml
niizarr/: __init__.py  _compat.py  _header.py  _nii2ome.py  _nii2zarr.py  _ome.py  _rfc4.py  _rfc5.py  _zarr2nii.py
tests/: _data.py  test_conversion.py  test_endian.py  test_json_validation.py  test_nii2zarr.py  test_pyramid_level.py
tests/data/example4d.nii.zarr/: .zattrs  0.npy  1.npy  nifti.npy
tests/data/example4d.nii.zarr/0/: .zarray
tests/data/example4d.nii.zarr/0/0/0/0/: 0  1
tests/data/example4d.nii.zarr/0/0/0/1/: 0  1
tests/data/example4d.nii.zarr/0/1/0/0/: 0  1
tests/data/example4d.nii.zarr/0/1/0/1/: 0  1
tests/data/example4d.nii.zarr/1/: .zarray
tests/data/example4d.nii.zarr/1/0/0/0/: 0
tests/data/example4d.nii.zarr/1/1/0/0/: 0
tests/data/example4d.nii.zarr/nifti/: .zattrs  0
tests/data/example_nifti2.nii.zarr/: .zattrs  0.npy  nifti.npy
tests/data/example_nifti2.nii.zarr/0/: .zarray
tests/data/example_nifti2.nii.zarr/0/0/0/0/: 0
tests/data/example_nifti2.nii.zarr/0/1/0/0/: 0
tests/data/example_nifti2.nii.zarr/nifti/: .zattrs  0
